--- a/src-help/nemp-help-de.tex
+++ b/src-help/nemp-help-de.tex
@@ -1321,6 +1321,11 @@ Das Nemp-Deskband für Windows XP und auch die Display-App für die Logitech G15, 
 
 Im Folgenden eine Zusammenfassung der Neuerungen in den einzelnen Versionen - von der aktuell vorliegenden bis hin zur allerersten Version dieses Programmes, das damals noch gar kein Player war. In diesem Abschnitt finden Sie die wesentlichen Neuerungen und nennenswerten Bugfixes, aber keine vollständige Liste aller Änderungen.
 
+\subsection*{Version 4.9.1, August 2018}
+\begin{itemize}
+\item Performance der Display-App für die G15 deutlich verbessert und dadurch die CPU-Last stark reduziert.
+\end{itemize}
+
 \subsection*{Version 4.9.0, August 2018}
 
 \textbf{Neue Funktionen und Änderungen}
