--- a/src-help/nemp-help-en.tex
+++ b/src-help/nemp-help-en.tex
@@ -1344,6 +1344,12 @@ The Nemp Deskband for Windows XP and the display app for the Logitech G15 includ
 
 The following is a summary of the new features in the individual versions - from the current version to the very first version of this program, which at that time was not even a player. In this section you will find the main new features and noteworthy bugfixes, but not a complete list of all changes.
 
+\subsection*{Version 4.9.1, August 2018}
+\begin{itemize}
+\item Performance of the display app for the G15 significantly improved and thereby greatly reduced the CPU load.
+\end{itemize}
+
+
 \subsection*{Version 4.9.0, August 2018}
 
 \textbf{New features}
